force-app/force-app/force-app/main/default/objects/Account/fields/Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Account External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>