force-app/force-app/force-app/main/default/objects/Account/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Forklift</fullName>
            </value>
            <value>
                <fullName>Skidsteer</fullName>
            </value>
            <value>
                <fullName>Metal Equipment</fullName>
            </value>
            <value>
                <fullName>GSE</fullName>
            </value>
            <value>
                <fullName>Cleaning Equipment</fullName>
            </value>
            <value>
                <fullName>Agri Implement</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Rotator</fullName>
            </value>
            <value>
                <fullName>Tow Tug</fullName>
            </value>
            <value>
                <fullName>Platform Truck</fullName>
            </value>
            <value>
                <fullName>Backhoe Solid</fullName>
            </value>
            <value>
                <fullName>Industrial Trolley</fullName>
            </value>
            <value>
                <fullName>Temple Trolley</fullName>
            </value>
            <value>
                <fullName>Industrial Trailer</fullName>
            </value>
            <value>
                <fullName>Telehandler</fullName>
            </value>
            <value>
                <fullName>Others (Please Specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>