force-app/force-app/force-app/main/default/objects/Account/fields/Application_Others__c.field-meta.xml
<CustomField>
    <fullName>Application_Others__c</fullName>
    <label>Application - Others</label>
    <length>100</length>
    <type>Text</type>
</CustomField>