force-app/force-app/force-app/main/default/objects/Account/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BankAccount__c.Name</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>