force-app/force-app/force-app/main/default/objects/Account/fields/Billing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <type>TextArea</type>
</CustomField>