force-app/force-app/force-app/main/default/objects/Account/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <formula>IF(ISPICKVAL( Billing_Country__c , &quot;Andorra&quot;), &quot;AD&quot;,
IF(ISPICKVAL(Billing_Country__c , &quot;United Arab Emirates&quot;), &quot;AE&quot;,
&quot;Other&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>