force-app/force-app/force-app/main/default/objects/Account/fields/Billing_GST_No__c.field-meta.xml
<CustomField>
    <fullName>Billing_GST_No__c</fullName>
    <label>Billing GST No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>