force-app/force-app/force-app/main/default/objects/Account/fields/Block_Sending_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Block_Sending_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Sending Marketing</label>
    <type>Checkbox</type>
</CustomField>