force-app/force-app/force-app/main/default/objects/Account/fields/Courier_Preference__c.field-meta.xml
<CustomField>
    <fullName>Courier_Preference__c</fullName>
    <label>Courier Preference</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bluedart</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>DTDC</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>