force-app/force-app/force-app/main/default/objects/Account/fields/Credit_Term__c.field-meta.xml
<CustomField>
    <fullName>Credit_Term__c</fullName>
    <label>Credit Term (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>