force-app/force-app/force-app/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <displayFormat>EM-{000000}</displayFormat>
    <label>Customer Number</label>
    <type>AutoNumber</type>
</CustomField>