force-app/force-app/force-app/main/default/objects/Account/fields/Deliveries__c.field-meta.xml
<CustomField>
    <fullName>Deliveries__c</fullName>
    <label>Deliveries</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>