force-app/force-app/force-app/main/default/objects/Account/fields/Est_Annual_Potential_for_Tyres_in_Nos__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_Potential_for_Tyres_in_Nos__c</fullName>
    <label>Est Annual Potential for Tyres in Nos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>