force-app/force-app/force-app/main/default/objects/Account/fields/Est_Fleet_Strength_In_Nos__c.field-meta.xml
<CustomField>
    <fullName>Est_Fleet_Strength_In_Nos__c</fullName>
    <label>Est Fleet Strength - In Nos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>