force-app/force-app/force-app/main/default/objects/Account/fields/Est_Potential_Value_in_lacs__c.field-meta.xml
<CustomField>
    <fullName>Est_Potential_Value_in_lacs__c</fullName>
    <label>Est Potential - Value in lacs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>