force-app/force-app/force-app/main/default/objects/Account/fields/Exp_GRN_Period__c.field-meta.xml
<CustomField>
    <fullName>Exp_GRN_Period__c</fullName>
    <formula>Credit_Term__c +  Transit_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp GRN Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>