force-app/force-app/force-app/main/default/objects/Account/fields/Fitment_Reqmnt__c.field-meta.xml
<CustomField>
    <fullName>Fitment_Reqmnt__c</fullName>
    <label>Fitment Reqmnt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>Included in Basic</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>