force-app/force-app/force-app/main/default/objects/Account/fields/Foreign_Name__c.field-meta.xml
<CustomField>
    <fullName>Foreign_Name__c</fullName>
    <label>Foreign Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>