force-app/force-app/force-app/main/default/objects/Account/fields/Freight_If_Paid__c.field-meta.xml
<CustomField>
    <fullName>Freight_If_Paid__c</fullName>
    <label>Freight  If Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>Included in Basic</fullName>
            </value>
            <value>
                <fullName>Additional in Inv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>