force-app/force-app/force-app/main/default/objects/Account/fields/Group_Company__c.field-meta.xml
<CustomField>
    <fullName>Group_Company__c</fullName>
    <label>Group Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>