force-app/force-app/force-app/main/default/objects/Account/fields/LD_Applicability__c.field-meta.xml
<CustomField>
    <fullName>LD_Applicability__c</fullName>
    <label>LD Applicability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>