force-app/force-app/force-app/main/default/objects/Account/fields/Local_Freight__c.field-meta.xml
<CustomField>
    <fullName>Local_Freight__c</fullName>
    <label>Local Freight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Customer</fullName>
            </value>
            <value>
                <fullName>To Transport</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>