force-app/force-app/force-app/main/default/objects/Account/fields/Major_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Major_Competitor__c</fullName>
    <label>Major Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>