force-app/force-app/force-app/main/default/objects/Account/fields/Major_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Major_Equipment__c</fullName>
    <label>Major Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>