force-app/force-app/force-app/main/default/objects/Account/fields/Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport__c</fullName>
    <label>Mode of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROAD</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>TRAIN</fullName>
            </value>
            <value>
                <fullName>OCEAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>