force-app/force-app/force-app/main/default/objects/Account/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JAN</fullName>
            </value>
            <value>
                <fullName>FEB</fullName>
            </value>
            <value>
                <fullName>MAR</fullName>
            </value>
            <value>
                <fullName>APR</fullName>
            </value>
            <value>
                <fullName>MAY</fullName>
            </value>
            <value>
                <fullName>JUN</fullName>
            </value>
            <value>
                <fullName>JULY</fullName>
            </value>
            <value>
                <fullName>AUG</fullName>
            </value>
            <value>
                <fullName>SEP</fullName>
            </value>
            <value>
                <fullName>OCT</fullName>
            </value>
            <value>
                <fullName>NOV</fullName>
            </value>
            <value>
                <fullName>DEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>