force-app/force-app/force-app/main/default/objects/Account/fields/Month_In_number__c.field-meta.xml
<CustomField>
    <fullName>Month_In_number__c</fullName>
    <formula>MONTH(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month(In number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>