force-app/force-app/force-app/main/default/objects/Account/fields/New_Existing_LCR__c.field-meta.xml
<CustomField>
    <fullName>New_Existing_LCR__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>LCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>