force-app/force-app/force-app/main/default/objects/Account/fields/Org_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Org_Ref_No__c</fullName>
    <displayFormat>C-EM-{00000}</displayFormat>
    <label>Org Ref No</label>
    <type>AutoNumber</type>
</CustomField>