force-app/force-app/force-app/main/default/objects/Account/fields/Overseas_Group_Company__c.field-meta.xml
<CustomField>
    <fullName>Overseas_Group_Company__c</fullName>
    <label>Overseas Group Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXPORT EURO CUSTOMER</fullName>
            </value>
            <value>
                <fullName>EXPORT MID EAST CUST</fullName>
            </value>
            <value>
                <fullName>EXPORT OTHER CUSTOMER</fullName>
            </value>
            <value>
                <fullName>EXPORT RSAFRICA CUST</fullName>
            </value>
            <value>
                <fullName>EXPORT USA CUSTOMERS</fullName>
            </value>
            <value>
                <fullName>EXPORT MERCHANT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>