force-app/force-app/force-app/main/default/objects/Account/fields/Overseas_VAT_No__c.field-meta.xml
<CustomField>
    <fullName>Overseas_VAT_No__c</fullName>
    <label>Overseas VAT No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>