force-app/force-app/force-app/main/default/objects/Account/fields/OverseasNo__c.field-meta.xml
<CustomField>
    <fullName>OverseasNo__c</fullName>
    <label>Overseas No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>