force-app/force-app/force-app/main/default/objects/Account/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 % ADVANCE, 90% AGAINST LETTER OF CREDIT</fullName>
            </value>
            <value>
                <fullName>10 DAYS AFTER COMPLETION OF WORK</fullName>
            </value>
            <value>
                <fullName>10 DAYS AGAINST POST DATED CHEQUE</fullName>
            </value>
            <value>
                <fullName>10 Days credit</fullName>
            </value>
            <value>
                <fullName>10% ADVANCE, BALANCE AGAINST CONFIRMATION OF READINESS OF GOODS FOR DESPATCH</fullName>
            </value>
            <value>
                <fullName>100 % ADVANCE.</fullName>
            </value>
            <value>
                <fullName>100% ADVANCE</fullName>
            </value>
            <value>
                <fullName>100% ADVANCE PAYMENT</fullName>
            </value>
            <value>
                <fullName>100% ADVANCE THROUGH WIRE TRANSFER</fullName>
            </value>
            <value>
                <fullName>100% AGAINST DELIVERY</fullName>
            </value>
            <value>
                <fullName>100% AGAINST PROFORMA INVOICE</fullName>
            </value>
            <value>
                <fullName>100% PAYMENT AGAINST BILL OF LADING</fullName>
            </value>
            <value>
                <fullName>120 DAYS FROM THE DATE OF INVOICE</fullName>
            </value>
            <value>
                <fullName>15 DAYS AGAINST POST DATED CHEQUE</fullName>
            </value>
            <value>
                <fullName>15 DAYS CREDIT</fullName>
            </value>
            <value>
                <fullName>20 % ADVANCE TT BALANCE AGAINST THE BL</fullName>
            </value>
            <value>
                <fullName>20% ADVANCE, BALANCE AGAINST CONFIRMATION OF READINESS OF GOODS FOR DESPATCH</fullName>
            </value>
            <value>
                <fullName>25% ADVANCE &amp; BALANCE 75% AGAINST D.P. AT SIGHT VIA BANK</fullName>
            </value>
            <value>
                <fullName>25% ADVANCE BALANCE AGAINST PROFORMA INVOICE</fullName>
            </value>
            <value>
                <fullName>25% ADVANCE, BALANCE AGAINST CONFIRMATION OF READINESS OF GOODS FOR DESPATCH</fullName>
            </value>
            <value>
                <fullName>30 DAYS AGAINST POST DATED CHEQUES</fullName>
            </value>
            <value>
                <fullName>30 DAYS CREDIT</fullName>
            </value>
            <value>
                <fullName>30 DAYS FROM BL SHIPPED ON BOARD DATE</fullName>
            </value>
            <value>
                <fullName>30 DAYS FROM THE DATE OF INVOICE</fullName>
            </value>
            <value>
                <fullName>30% ADVANCE  &amp; 70% AGAINST BILL OF LADING</fullName>
            </value>
            <value>
                <fullName>30% ADVANCE  &amp; 70% AGAINST PROFORMA INVOICE</fullName>
            </value>
            <value>
                <fullName>30% ADVANCE, 50% ON PROGRESS, 20%ON COMMISSIONING</fullName>
            </value>
            <value>
                <fullName>30% ADVANCE, BALANCE 70% AFTER 45 DAYS</fullName>
            </value>
            <value>
                <fullName>30% ADVANCE, BALANCE 70% DP</fullName>
            </value>
            <value>
                <fullName>30% ADVANCE, BALANCE AGAINST CONFIRMATION OF READINESS OF GOODS FOR DESPATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>