force-app/force-app/force-app/main/default/objects/Account/fields/SAP_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Number__c</fullName>
    <label>SAP Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>