force-app/force-app/force-app/main/default/objects/Account/fields/Shipping_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Line_3__c</fullName>
    <label>Address Line 3</label>
    <type>TextArea</type>
</CustomField>