force-app/force-app/force-app/main/default/objects/Account/fields/Shipping_Address_same_as_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_same_as_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Address same as Billing Address</label>
    <type>Checkbox</type>
</CustomField>